--- a/src/app/register/register/register.component.html
+++ b/src/app/register/register/register.component.html
@@ -41,7 +41,7 @@
 
     <div class="social-auth-links text-center">
       <p>- OR -</p>
-      <a href="#" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i>Entrar com Facebook</a>
+      <a (click)="signInWithFB()"  class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i>Entrar com Facebook</a>
       <a href="#" class="btn btn-block btn-social btn-google btn-flat"><i class="fa fa-google-plus"></i>Entrar com Google+</a>
     </div>
 
